// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pattern/ConversationList List: Pattern/ConversationList List 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #26a304;
  border-radius: 50%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #f44336;
  border-radius: 50%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #bdbdbd;
  border-radius: 50%;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c11 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c7 {
  display: inline-block;
  width: 20px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c13 {
  display: inline-block;
  width: 20px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #ff8800;
  color: rgba(0,0,0,0.87);
  font-size: 0;
  height: 10px;
  width: 10px;
  line-height: 10px;
  color: transparent;
  visibility: visible;
}

li:hover > .c13,
div:hover > .c13 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c14 {
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c15 {
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: hidden;
}

.c2.c2 {
  padding-top: 0;
  padding-bottom: 0;
}

.c6.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0px 12px 0px 8px;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: inherit;
  z-index: 2;
}

.c8 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 2;
  outline: none;
}

.c3.c3 {
  white-space: nowrap;
  padding: 0px 16px 0px 12px;
  height: 32px;
  line-height: 32px;
  color: #212121;
  -webkit-transition: -webkit-transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3.c3.dragging {
  z-index: 2000;
}

.c3.c3:active p {
  color: #0684bd;
}

.c3.c3 .c9 {
  color: #bdbdbd;
  display: none;
  font-size: 20px;
}

.c3.c3.c3:hover {
  background-color: rgba(97,97,97,0.05);
}

.c3.c3.c3:hover .c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3.c3.c3:hover .c17,
.c3.c3.c3:hover .sc-fkyLDJ {
  display: none;
}

.c3.c3.selected {
  background-color: rgba(97,97,97,0.1);
}

.c3.c3.selected p {
  color: #0684bd;
}

.c3.c3:last-child {
  margin-bottom: 8px;
}

.c3 .child {
  color: #EBF6FA;
  opacity: 0.88;
}

.c3 .rippleVisible {
  color: #EBF6FA;
  opacity: 0.88;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: emWDgo;
  animation-name: emWDgo;
  z-index: 1;
}

.c4 {
  width: 8px;
  height: 8px;
  margin: 6px;
  z-index: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #e1e1e1;
  padding: 40px;
}

.c1 {
  width: 320px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="MuiList-root MuiList-padding c2"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Matthew
        </p>
        <span
          aria-hidden={true}
          className="umi c7"
        >
          10
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span />
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c12"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Eric, Odeson, Helena, Lip, Valor, Steve, Lyman, Nello
        </p>
        <span
          aria-hidden={true}
          className="umi c13"
        >
          12
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span />
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c12"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Maria
        </p>
        <span
          aria-hidden={true}
          className="umi c14"
        >
          9
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span />
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c12"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Jupiter Team
        </p>
        <span
          aria-hidden={true}
          className="umi c15"
        >
          
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span />
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c12"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Michael
        </p>
        <span
          aria-hidden={true}
          className="umi c15"
        >
          
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span />
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c16"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Steve
        </p>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span />
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pattern/ConversationList ListItem: Pattern/ConversationList ListItem 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #f44336;
  border-radius: 50%;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c6 {
  display: inline-block;
  width: 28px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0;
  height: 10px;
  width: 10px;
  line-height: 10px;
  color: transparent;
  visibility: visible;
}

li:hover > .c6,
div:hover > .c6 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c5.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0px 12px 0px 8px;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: inherit;
  z-index: 2;
}

.c7 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 2;
  outline: none;
}

.c2.c2 {
  white-space: nowrap;
  padding: 0px 16px 0px 12px;
  height: 32px;
  line-height: 32px;
  color: #212121;
  -webkit-transition: -webkit-transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c2.c2.dragging {
  z-index: 2000;
}

.c2.c2:active p {
  color: #0684bd;
}

.c2.c2 .c8 {
  color: #bdbdbd;
  display: none;
  font-size: 20px;
}

.c2.c2.c2:hover {
  background-color: rgba(97,97,97,0.05);
}

.c2.c2.c2:hover .c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2.c2.c2:hover .c11,
.c2.c2.c2:hover .sc-fkyLDJ {
  display: none;
}

.c2.c2.selected {
  background-color: rgba(97,97,97,0.1);
}

.c2.c2.selected p {
  color: #0684bd;
}

.c2.c2:last-child {
  margin-bottom: 8px;
}

.c2 .child {
  color: #EBF6FA;
  opacity: 0.88;
}

.c2 .rippleVisible {
  color: #EBF6FA;
  opacity: 0.88;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: emWDgo;
  animation-name: emWDgo;
  z-index: 1;
}

.c3 {
  width: 8px;
  height: 8px;
  margin: 6px;
  z-index: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #e1e1e1;
  padding: 40px;
}

.c1 {
  width: 320px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <li
      className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c2"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        />
      </div>
      <p
        className="MuiTypography-root MuiTypography-body2 c5"
        style={
          Object {
            "fontWeight": "normal",
          }
        }
      >
        Eric, Odeson, Helena, Lip, Valor, Steve, Lyman, Nello
      </p>
      <span
        aria-hidden={true}
        className="umi c6"
      >
        99+
      </span>
      <div
        className="c7"
        tabIndex={-1}
      >
        <span />
        <span
          className="c8 more_vert icon c9"
          onClick={[Function]}
        >
          <svg
            className="c10"
            role="img"
          >
            <use
              href="#icon-more_vert"
              xlinkHref="#icon-more_vert"
            />
          </svg>
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
  </div>
</div>
`;

exports[`Storyshots Pattern/ConversationList Section: Pattern/ConversationList Section 1`] = `
.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #26a304;
  border-radius: 50%;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #f44336;
  border-radius: 50%;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #bdbdbd;
  border-radius: 50%;
}

.c24 {
  width: 6px;
  height: 2px;
  background: #fff;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c18 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c10 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
}

.c6 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 16px;
}

.c3.c3 {
  padding: 8px 16px 8px 12px;
  color: #212121;
  height: 44px;
  line-height: 44px;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
}

.c3.c3:active {
  color: #0684bd;
  background: #e1f4fb;
}

.c3.c3:hover {
  background-color: rgba(97,97,97,0.05);
}

.c3.c3.selected.c2.c3.selected:hover {
  background-color: rgba(97,97,97,0.1);
}

.c3.c3.selected p {
  color: #0684bd;
}

.c3.c3.selected > .c4 {
  color: #0684bd;
}

.c3.c3 > .c4 {
  font-size: 20px;
  color: rgba(117,117,117,0.4);
  z-index: 2;
}

.c3.c3 > .c9 {
  color: #bdbdbd;
  font-size: 20px;
  margin-bottom: -1px;
}

.c3 .child {
  color: #EBF6FA;
  opacity: 0.88;
}

.c3 .rippleVisible {
  color: #EBF6FA;
  opacity: 0.88;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: emWDgo;
  animation-name: emWDgo;
  z-index: 1;
}

.c15 {
  display: inline-block;
  width: 20px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c20 {
  display: inline-block;
  width: 20px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #ff8800;
  color: rgba(0,0,0,0.87);
  font-size: 0;
  height: 10px;
  width: 10px;
  line-height: 10px;
  color: transparent;
  visibility: visible;
}

li:hover > .c20,
div:hover > .c20 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c21 {
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c22 {
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: hidden;
}

.c11.c11 {
  padding-top: 0;
  padding-bottom: 0;
}

.c7.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0px 12px 0px 8px;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: inherit;
  z-index: 2;
}

.c16 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 2;
  outline: none;
}

.c12.c12 {
  white-space: nowrap;
  padding: 0px 16px 0px 12px;
  height: 32px;
  line-height: 32px;
  color: #212121;
  -webkit-transition: -webkit-transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c12.c12.dragging {
  z-index: 2000;
}

.c12.c12:active p {
  color: #0684bd;
}

.c12.c12 .c17 {
  color: #bdbdbd;
  display: none;
  font-size: 20px;
}

.c12.c12.c12:hover {
  background-color: rgba(97,97,97,0.05);
}

.c12.c12.c12:hover .c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c12.c12.c12:hover .c25,
.c12.c12.c12:hover .sc-fkyLDJ {
  display: none;
}

.c12.c12.selected {
  background-color: rgba(97,97,97,0.1);
}

.c12.c12.selected p {
  color: #0684bd;
}

.c12.c12:last-child {
  margin-bottom: 8px;
}

.c12 .child {
  color: #EBF6FA;
  opacity: 0.88;
}

.c12 .rippleVisible {
  color: #EBF6FA;
  opacity: 0.88;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: emWDgo;
  animation-name: emWDgo;
  z-index: 1;
}

.c13 {
  width: 8px;
  height: 8px;
  margin: 6px;
  z-index: 2;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #e1e1e1;
  padding: 40px;
}

.c1 {
  width: 320px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button conversation-list-section-header c2 c3"
        data-test-automation-id="conversation-list-section-header"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="c4 star icon c5"
        >
          <svg
            className="c6"
            role="img"
            size="small"
          >
            <use
              href="#icon-star"
              xlinkHref="#icon-star"
            />
          </svg>
        </span>
        <p
          className="MuiTypography-root MuiTypography-body2 c7"
        >
          Favorite
        </p>
        <div
          className="c8"
        >
          <span
            className="c9 arrow_up icon c5"
          >
            <svg
              className="c10"
              role="img"
              size="medium"
            >
              <use
                href="#icon-arrow_up"
                xlinkHref="#icon-arrow_up"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </div>
      <div
        className="MuiCollapse-container MuiCollapse-entered"
        style={
          Object {
            "minHeight": "0px",
          }
        }
      >
        <div
          className="MuiCollapse-wrapper"
        >
          <div
            className="MuiCollapse-wrapperInner"
          >
            <div
              className="MuiList-root MuiList-padding c11"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menu"
            >
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c12"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <div
                  className="c13"
                >
                  <div
                    className="c14"
                  />
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 c7"
                  style={
                    Object {
                      "fontWeight": "normal",
                    }
                  }
                >
                  Matthew
                </p>
                <span
                  aria-hidden={true}
                  className="umi c15"
                >
                  10
                </span>
                <div
                  className="c16"
                  tabIndex={-1}
                >
                  <span />
                  <span
                    className="c17 more_vert icon c5"
                  >
                    <svg
                      className="c18"
                      role="img"
                    >
                      <use
                        href="#icon-more_vert"
                        xlinkHref="#icon-more_vert"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c12"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="c13"
                >
                  <div
                    className="c19"
                  />
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 c7"
                  style={
                    Object {
                      "fontWeight": "normal",
                    }
                  }
                >
                  Eric, Odeson, Helena, Lip, Valor, Steve, Lyman, Nello
                </p>
                <span
                  aria-hidden={true}
                  className="umi c20"
                >
                  12
                </span>
                <div
                  className="c16"
                  tabIndex={-1}
                >
                  <span />
                  <span
                    className="c17 more_vert icon c5"
                  >
                    <svg
                      className="c18"
                      role="img"
                    >
                      <use
                        href="#icon-more_vert"
                        xlinkHref="#icon-more_vert"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c12"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="c13"
                >
                  <div
                    className="c19"
                  />
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 c7"
                  style={
                    Object {
                      "fontWeight": "normal",
                    }
                  }
                >
                  Maria
                </p>
                <span
                  aria-hidden={true}
                  className="umi c21"
                >
                  9
                </span>
                <div
                  className="c16"
                  tabIndex={-1}
                >
                  <span />
                  <span
                    className="c17 more_vert icon c5"
                  >
                    <svg
                      className="c18"
                      role="img"
                    >
                      <use
                        href="#icon-more_vert"
                        xlinkHref="#icon-more_vert"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c12"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="c13"
                >
                  <div
                    className="c19"
                  />
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 c7"
                  style={
                    Object {
                      "fontWeight": "normal",
                    }
                  }
                >
                  Jupiter Team
                </p>
                <span
                  aria-hidden={true}
                  className="umi c22"
                >
                  
                </span>
                <div
                  className="c16"
                  tabIndex={-1}
                >
                  <span />
                  <span
                    className="c17 more_vert icon c5"
                  >
                    <svg
                      className="c18"
                      role="img"
                    >
                      <use
                        href="#icon-more_vert"
                        xlinkHref="#icon-more_vert"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c12"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="c13"
                >
                  <div
                    className="c23"
                  >
                    <div
                      className="c24"
                    />
                  </div>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 c7"
                  style={
                    Object {
                      "fontWeight": "normal",
                    }
                  }
                >
                  Michael
                </p>
                <span
                  aria-hidden={true}
                  className="umi c22"
                >
                  
                </span>
                <div
                  className="c16"
                  tabIndex={-1}
                >
                  <span />
                  <span
                    className="c17 more_vert icon c5"
                  >
                    <svg
                      className="c18"
                      role="img"
                    >
                      <use
                        href="#icon-more_vert"
                        xlinkHref="#icon-more_vert"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
              <li
                className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c12"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <div
                  className="c13"
                >
                  <div
                    className="c19"
                  />
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 c7"
                  style={
                    Object {
                      "fontWeight": "normal",
                    }
                  }
                >
                  Steve
                </p>
                <div
                  className="c16"
                  tabIndex={-1}
                >
                  <span />
                  <span
                    className="c17 more_vert icon c5"
                  >
                    <svg
                      className="c18"
                      role="img"
                    >
                      <use
                        href="#icon-more_vert"
                        xlinkHref="#icon-more_vert"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pattern/ConversationList SortableList: Pattern/ConversationList SortableList 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #26a304;
  border-radius: 50%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #f44336;
  border-radius: 50%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
  border: px solid #fff;
  background: #bdbdbd;
  border-radius: 50%;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c11 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c7 {
  display: inline-block;
  width: 20px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c13 {
  display: inline-block;
  width: 20px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #ff8800;
  color: rgba(0,0,0,0.87);
  font-size: 0;
  height: 10px;
  width: 10px;
  line-height: 10px;
  color: transparent;
  visibility: visible;
}

li:hover > .c13,
div:hover > .c13 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c14 {
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: visible;
}

.c15 {
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 12px;
  -webkit-transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: font-size 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,line-height 150ms cubic-bezier(0.4,0,0.2,1) 0ms,color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  background: #9e9e9e;
  color: rgba(0,0,0,0.87);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  text-align: center;
  visibility: hidden;
}

.c2.c2 {
  padding-top: 0;
  padding-bottom: 0;
}

.c6.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0px 12px 0px 8px;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: inherit;
  z-index: 2;
}

.c8 {
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 2;
  outline: none;
}

.c3.c3 {
  white-space: nowrap;
  padding: 0px 16px 0px 12px;
  height: 32px;
  line-height: 32px;
  color: #212121;
  -webkit-transition: -webkit-transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 0s ease, background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3.c3.dragging {
  z-index: 2000;
}

.c3.c3:active p {
  color: #0684bd;
}

.c3.c3 .c9 {
  color: #bdbdbd;
  display: none;
  font-size: 20px;
}

.c3.c3.c3:hover {
  background-color: rgba(97,97,97,0.05);
}

.c3.c3.c3:hover .c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3.c3.c3:hover .c17,
.c3.c3.c3:hover .sc-fkyLDJ {
  display: none;
}

.c3.c3.selected {
  background-color: rgba(97,97,97,0.1);
}

.c3.c3.selected p {
  color: #0684bd;
}

.c3.c3:last-child {
  margin-bottom: 8px;
}

.c3 .child {
  color: #EBF6FA;
  opacity: 0.88;
}

.c3 .rippleVisible {
  color: #EBF6FA;
  opacity: 0.88;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: emWDgo;
  animation-name: emWDgo;
  z-index: 1;
}

.c4 {
  width: 8px;
  height: 8px;
  margin: 6px;
  z-index: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #e1e1e1;
  padding: 40px;
}

.c1 {
  width: 320px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="MuiList-root MuiList-padding c2"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Matthew
        </p>
        <span
          aria-hidden={true}
          className="umi c7"
        >
          10
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c12"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Eric, Odeson, Helena, Lip, Valor, Steve, Lyman, Nello
        </p>
        <span
          aria-hidden={true}
          className="umi c13"
        >
          12
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c12"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Maria
        </p>
        <span
          aria-hidden={true}
          className="umi c14"
        >
          9
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c12"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Jupiter Team
        </p>
        <span
          aria-hidden={true}
          className="umi c15"
        >
          
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c16"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Michael
        </p>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <div
          className="c4"
        >
          <div
            className="c16"
          />
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 c6"
          style={
            Object {
              "fontWeight": "normal",
            }
          }
        >
          Steve
        </p>
        <span
          aria-hidden={true}
          className="umi c15"
        >
          
        </span>
        <div
          className="c8"
          tabIndex={-1}
        >
          <span
            className="c9 more_vert icon c10"
          >
            <svg
              className="c11"
              role="img"
            >
              <use
                href="#icon-more_vert"
                xlinkHref="#icon-more_vert"
              />
            </svg>
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
    </div>
  </div>
</div>
`;
